--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
 python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.36"
+pymysql = "^1.1.1"
+cryptography = "^44.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
