--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pymysql = "^1.1.1"
 cryptography = "^44.0.0"
 bcrypt = "^4.2.1"
 pyjwt = "^2.10.1"
+openai = "^1.59.3"
+pymilvus = {extras = ["model"], version = "^2.5.3"}
 
 
 [tool.poetry.group.dev.dependencies]
