--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pyjwt = "^2.10.1"
 requests = "^2.32.3"
 openai = "^1.59.3"
 pymilvus = {extras = ["model"], version = "^2.5.3"}
+newscatcherapi = "^0.7.3"
+apscheduler = "^3.11.0"
 
 
 [tool.poetry.group.dev.dependencies]
